--- a/package.json
+++ b/package.json
@@ -23,26 +23,27 @@
   "dependencies": {
     "@mapbox/rehype-prism": "^0.9.0",
     "@react-icons/all-files": "^4.1.0",
-    "@tailwindcss/typography": "^0.5.0",
-    "classnames": "^2.3.1",
-    "cypress": "^10.1.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "classnames": "^2.5.1",
+    "cypress": "^13.7.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
-    "next-mdx-remote": "^4.1.0",
-    "next-remote-watch": "1.0.0",
-    "prismjs": "^1.25.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "remark-gfm": "^3.0.1",
+    "next-mdx-remote": "^4.4.1",
+    "next-remote-watch": "2.0.0",
+    "prismjs": "^1.29.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "remark-gfm": "^4.0.0",
     "typescript": "^5.4.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
+    "@typescript-eslint/parser": "^7.3.0",
+    "autoprefixer": "^10.4.18",
     "eslint": "<9.0.0",
-    "eslint-config-next": "12.3.4",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-next": "14.1.3",
+    "eslint-config-prettier": "^9.1.0",
     "netlify-plugin-cypress": "~2.2.1",
-    "postcss": "^8.4.4",
-    "tailwindcss": "^3.0.0"
+    "postcss": "^8.4.36",
+    "tailwindcss": "^3.4.1"
   }
 }
