--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rehype-highlight": "^7.0.0",
     "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
     "typescript": "^5.4.2"
   },
   "devDependencies": {
