--- a/package.json
+++ b/package.json
@@ -23,29 +23,32 @@
   "dependencies": {
     "@mapbox/rehype-prism": "^0.9.0",
     "@react-icons/all-files": "^4.1.0",
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.19",
     "classnames": "^2.5.1",
-    "cypress": "^13.7.0",
     "gray-matter": "^4.0.3",
-    "next": "latest",
-    "next-mdx-remote": "^4.4.1",
-    "next-remote-watch": "2.0.0",
-    "prismjs": "^1.29.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rehype-highlight": "^7.0.0",
-    "remark-gfm": "^4.0.0",
+    "next": "^15.1.6",
+    "next-mdx-remote": "^5.0.0",
+    "next-remote-watch": "^2.0.0",
+    "prismjs": "^1.30.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
-    "typescript": "^5.4.2"
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^7.3.0",
-    "autoprefixer": "^10.4.18",
-    "eslint": "<9.0.0",
-    "eslint-config-next": "14.1.3",
-    "eslint-config-prettier": "^9.1.0",
+    "@types/node": "^22.10.5",
+    "@types/react": "^19.0.6",
+    "@types/react-dom": "^19.0.2",
+    "@typescript-eslint/parser": "^8.53.0",
+    "autoprefixer": "^10.4.23",
+    "cypress": "^15.9.0",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^15.1.6",
+    "eslint-config-prettier": "^10.1.8",
     "netlify-plugin-cypress": "~2.2.1",
-    "postcss": "^8.4.36",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19"
   }
 }
